--- a/entertainment.html
+++ b/entertainment.html
@@ -28,6 +28,54 @@
     <article>
         <h3>New Film Haq receives Positive Response</h3>
         <p>
+            Haq, a Hindi courtroom drama released in 2025, features Yami Gautam Dhar alongside Emraan Hashmi in lead roles. The film, directed by Suparn Varma, centres on a woman’s determined fight to secure her legal rights. Although its theatrical run in November 2025 delivered only moderate box office results, the film has found renewed momentum after premiering on Netflix, where it has drawn favourable reactions for both its performances and its socially relevant theme.
+        </p>
+    </article>
+
+    <article>
+        <h3>Music Festival Attracts Large Crowd</h3>
+        <p>
+            In 2026, large-scale music festivals are attracting huge and energetic audiences, fuelled by the popularity of electronic dance music in India — seen at events like Sunburn in Goa and Mumbai — as well as globally recognised gatherings such as Tomorrowland and Coachella. Festivals including Exit Festival, which draws over two lakh attendees, showcase leading international DJs and a range of musical styles, while Austria’s Donauinselfest remains among the biggest, welcoming nearly three million visitors across three days.
+        </p>
+    </article>
+</main>
+
+<footer>
+    <p>© 2026 Daily Voice News | MJML-20 Project</p>
+</footer>
+
+</body>
+</html>
+<!-- IGNOU MJML-20 Practical Assignment: News Website -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Entertainment News - Daily Voice News</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+
+<header>
+    <h1>Daily Voice News</h1>
+    <p>Entertainment News</p>
+</header>
+
+<nav>
+    <a href="index.html">Home</a>
+    <a href="national.html">National</a>
+    <a href="international.html">International</a>
+    <a href="sports.html">Sports</a>
+    <a href="entertainment.html">Entertainment</a>
+</nav>
+
+<main>
+    <h2>Entertainment News</h2>
+
+    <article>
+        <h3>New Film Haq receives Positive Response</h3>
+        <p>
             New Film Haq; starring Yami Gautam Dhar and Emraan Hashmi,Release Receives Positive Response.
         </p>
     </article>
@@ -47,3 +95,4 @@
 
 </body>
 </html>
+
