--- a/international.html
+++ b/international.html
@@ -28,16 +28,34 @@
     <article>
         <h3>Global Leaders Meet for Climate Summit</h3>
         <p>
-            World leaders gathered to discuss climate change, environmental
-            protection, and sustainable development during an international summit.
+            On November 6 and 7, the capital of the Brazilian state of Pará will host a Climate Summit at Parque da Cidade in Belém. The high-level gathering will bring together heads of state and government, cabinet ministers, and leaders of international organisations to deliberate on urgent climate change challenges and global commitments.
+
+The summit, convened by President Luiz Inácio Lula da Silva, marks an important step in strengthening international dialogue and political mobilisation around climate action. It will precede the 30th Conference of the Parties (COP30) to the United Nations Framework Convention on Climate Change, scheduled to take place in Belém from November 10 to 21.
+
+Ambassador Mauricio Lyrio, Secretary for Climate, Energy and the Environment at Brazil’s Ministry of Foreign Affairs, explained that the programme will open with a plenary session led by President Lula on the morning of November 6, continuing through the following day. A luncheon dedicated to the Tropical Forests Forever Fund will be held on Thursday afternoon alongside the main proceedings.
+
+Over the course of the two days, three thematic sessions chaired by the president are planned. Discussions on Forests and Oceans will take place on the afternoon of November 6. The morning of November 7 will focus on Energy Transition, while the afternoon session will address ten years of the Paris Agreement, nationally determined contributions (NDCs), and climate financing.
+
+Ambassador Liliam Chagas, Director of the Climate Department at the Ministry of Foreign Affairs and Brazil’s lead negotiator for COP30, noted that hosting the summit in Belém underscores Brazil’s intention to elevate climate change as a top political priority. She emphasised that, although international frameworks and mechanisms already exist to curb emissions and support adaptation, stronger political engagement at the highest level is now essential.
+
+Highlighting growing global concern over extreme climate events, she added that the summit seeks to build renewed political momentum ahead of COP30 by placing key issues before world leaders for direct engagement and decision-making.
+
         </p>
     </article>
 
     <article>
-        <h3>Economic Cooperation Talks Held</h3>
+        <h3>India - Malaysia Joint Statement on the occasion of the Official visit by Prime minister of India to Malaysia</h3>
         <p>
-            Representatives from various countries held discussions aimed at
-            strengthening economic cooperation and global trade relations.
+            At the invitation of the Prime Minister of Malaysia, His Excellency Dato’ Seri Anwar Ibrahim, the Prime Minister of India, His Excellency Shri Narendra Modi, paid an official visit to Malaysia from 7 to 8 February 2026. The visit highlighted the longstanding friendship and close people-to-people connections between the two nations, rooted in centuries-old civilisational linkages. It also underscored the determination of both leaders to deepen and broaden the India–Malaysia Comprehensive Strategic Partnership.
+
+Since establishing diplomatic relations in 1957, India and Malaysia have nurtured ties grounded in mutual respect and shared principles. In August 2024, this relationship was upgraded to the level of a Comprehensive Strategic Partnership, reflecting its growing scope and significance.
+
+During the visit, Prime Minister Modi received a ceremonial welcome at the Perdana Putra Complex in Putrajaya. On 8 February 2026, the two Prime Ministers held formal bilateral talks, reaffirming their commitment to advancing the Comprehensive Strategic Partnership. Their discussions, conducted in a cordial and constructive atmosphere, spanned the entire range of bilateral cooperation. Key areas included political dialogue, defence and security collaboration, maritime engagement, trade and investment, the digital economy, science and technology, energy, agriculture, healthcare, education, culture, tourism, youth exchanges, and broader people-to-people interactions. They also exchanged views on regional and global issues of common concern.
+
+Prime Minister Anwar Ibrahim hosted an official luncheon in honour of Prime Minister Modi. The leaders also witnessed the signing and exchange of several bilateral agreements aimed at enhancing institutional cooperation.
+
+Both leaders emphasised that the enduring historical connections, shared cultural traditions, democratic values, and the vibrant Indian community in Malaysia provide a strong and distinctive foundation for the bilateral relationship, enriching its multifaceted character and long-term prospects.
+
         </p>
     </article>
 </main>
