--- a/national.html
+++ b/national.html
@@ -28,17 +28,56 @@
     <article>
         <h3>Government Introduces New Education Policy</h3>
         <p>
-            The central government has introduced a new education policy aimed at
-            improving learning outcomes and increasing access to quality education
-            across the country.
+            The National Education Policy 2020 (NEP 2020) represents a significant overhaul of India’s education system, aiming to make learning more flexible, multidisciplinary and technology-oriented. The policy introduces a new 5+3+3+4 academic structure, emphasises foundational literacy and numeracy, encourages vocational exposure from Class 6, and recommends the use of the mother tongue as the medium of instruction up to Grade 5 wherever feasible. It also seeks to achieve universal school enrolment by 2030.
+
+### Major Features of NEP 2020
+
+**Revised School Structure (5+3+3+4):**
+The policy reorganises schooling into four stages — three years of pre-school or Anganwadi education followed by twelve years of formal schooling. These include the Foundational stage (ages 3–8), Preparatory stage (8–11), Middle stage (11–14) and Secondary stage (14–18), aligning learning with developmental needs.
+
+**Curriculum and Teaching Approach:**
+Rigid divisions between arts, science and extracurricular subjects are removed. Greater emphasis is placed on critical thinking, experiential learning and skill-based education, including vocational training from Class 6 onward.
+
+**Language Policy:**
+Schools are encouraged to teach, wherever practical, in the mother tongue or regional language at least until Grade 5 to support better comprehension and early learning.
+
+**Assessment Reforms:**
+Traditional report cards are replaced with a comprehensive “360-degree” progress report designed to evaluate cognitive development, skills and overall growth.
+
+**Higher Education Reforms:**
+The policy targets a Gross Enrolment Ratio of 50 percent in higher education by 2035. It introduces flexible entry and exit options, an Academic Bank of Credits for transferring learning records, and a single regulatory framework for higher education institutions.
+
+**Teacher Education:**
+By 2030, a four-year integrated B.Ed. programme will become the minimum qualification required for school teachers, aiming to strengthen professional training standards.
+
         </p>
     </article>
 
     <article>
         <h3>Infrastructure Development Projects Announced</h3>
         <p>
-            Several new infrastructure projects have been announced to boost
-            economic growth and improve connectivity between major cities.
+            Several major infrastructure initiatives announced or progressing during 2025–2026 are aimed at strengthening urban development, connectivity and the digital economy. These include the proposed ₹1 lakh crore Urban Challenge Fund for city modernisation, the 508-kilometre Mumbai–Ahmedabad High-Speed Rail corridor, and large-scale national connectivity programmes such as Bharatmala and Sagarmala. Overall, the projects prioritise transport networks, urban services and digital capacity to support long-term economic growth.
+
+### Key Infrastructure Developments (2025–2026)
+
+**Urban and City Development:**
+The Union Cabinet has approved the Urban Challenge Fund, providing central assistance of ₹1 lakh crore over five years to upgrade urban infrastructure and promote sustainable, climate-responsive cities.
+
+**Railways and Metro Expansion:**
+Work continues on the Mumbai–Ahmedabad High-Speed Rail corridor to enhance intercity connectivity. Metro rail expansion is also underway in Kolkata, including services along the Noapara–Jai Hind Bimanbandar route and the Sealdah–Esplanade corridor.
+
+**Road Connectivity:**
+The Bharatmala Pariyojana programme has progressed significantly, with over 26,000 kilometres of highways awarded by mid-2025 to strengthen national logistics networks. In West Bengal, construction of the 7.2-kilometre six-lane elevated Kona Expressway has begun to reduce congestion and improve traffic flow.
+
+**Digital Infrastructure:**
+The government is expanding the national cloud platform GI Cloud (Megh3Raj) and developing new data centres to support AI-enabled governance and public services.
+
+**Logistics and Energy:**
+The Western Dedicated Freight Corridor has become more than 96 percent operational by mid-2025. Large projects such as the Noida International Airport and the Khavda Renewable Energy Park are also moving toward completion.
+
+**Industrial Corridors:**
+Multiple nodes under the Delhi–Mumbai Industrial Corridor are under development to improve industrial connectivity and attract investment.
+
         </p>
     </article>
 </main>
