--- a/sports.html
+++ b/sports.html
@@ -26,18 +26,28 @@
     <h2>Sports News</h2>
 
     <article>
-        <h3>India Wins Thrilling Cricket Match</h3>
+        <h3>Karate Kata: Why the Old Forms Still Matter (and What MMA Critics Miss)</h3>
         <p>
-            The Indian cricket team secured a memorable victory in a closely
-            contested match, delighting fans across the country.
+            Kata are not a substitute for sparring. They are a complementary tool. Practising kata gives you a controlled environment to polish technique before exposing it to chaos. Think of kata as low‑pressure lab time: you isolate variables, improve mechanics and then stress‑test them in sparring and drilling. This two‑step approach speeds learning and reduces bad habits.
+
+Modern & traditional dojos would both recommend blending kata, bunkai and live drills so kata inform practical application rather than remain rote exercise, and some set their entire purpose as being this idea of studying bunkai and applying it, forgoing some of what we would think of as “traditional” dojo practise.  
         </p>
     </article>
 
     <article>
-        <h3>National Sports Meet Concludes Successfully</h3>
+        <h3>Indian boxers concluded the Spanish tournament with a total of nine gold, three silver, and seven bronze medals.
+</h3>
         <p>
-            Athletes from different states participated in the national sports
-            meet, showcasing talent and sportsmanship.
+            Olympic medallist Lovlina Borgohain spearheaded India’s dominant performance at the Boxam Elite International 2026, which concluded in La Nucia, Alicante, Spain, on Sunday.
+
+The Indian boxing team finished the competition with a total of 19 medals, including nine gold and three silver secured on the final day, along with seven bronze medals won earlier in the tournament. With this tally, India emerged as the most successful nation at the meet.
+
+In the women’s category, India reached seven finals — notably featuring an all-Indian title bout in the 54 kg division — and converted every appearance into a gold medal.
+
+Lovlina displayed her trademark composure in the 75 kg final, defeating England’s Mary-Kate Smith by a 4–1 decision.
+
+Earlier, Manju Rani in the 48 kg category and Nitu Ghanghas in the 51 kg category registered commanding unanimous decision victories over Spain’s Marta Lopez and Noelia Gutierrez respectively. In the 54 kg final, Poonam narrowly defeated compatriot Preeti Pawar in a closely contested bout.
+
         </p>
     </article>
 </main>
