--- a/index.html
+++ b/index.html
@@ -33,10 +33,14 @@
 
     <h3>Top Headlines</h3>
     <ul>
-        <li>Government announces new education reforms</li>
-        <li>International summit focuses on climate change</li>
-        <li>India records a thrilling sports victory</li>
-        <li>New movie release creates buzz among audiences</li>
+        <li>Government Introduces New Education Policy</li>
+        <li>nfrastructure Development Projects Announced</li>
+        <li>Global Leaders Meet for Climate Summit</li>
+        <li>India - Malaysia Joint Statement on the occasion of the Official visit by Prime minister of India to Malaysia</li>
+        <li>India - Karate Kata: Why the Old Forms Still Matter (and What MMA Critics Miss)</li>
+        <li>India - Indian boxers concluded the Spanish tournament with a total of nine gold, three silver, and seven bronze medals.</li>
+        <li>India - New Film Haq receives Positive Response</li>
+        <li>India - Music Festival Attracts Large Crowd</li>
     </ul>
 </main>
 
@@ -46,3 +50,4 @@
 
 </body>
 </html>
+
