--- a/index.html
+++ b/index.html
@@ -33,14 +33,20 @@
 
     <h3>Top Headlines</h3>
     <ul>
-        <li>Government Introduces New Education Policy</li>
-        <li>nfrastructure Development Projects Announced</li>
-        <li>Global Leaders Meet for Climate Summit</li>
-        <li>India - Malaysia Joint Statement on the occasion of the Official visit by Prime minister of India to Malaysia</li>
-        <li>India - Karate Kata: Why the Old Forms Still Matter (and What MMA Critics Miss)</li>
-        <li>India - Indian boxers concluded the Spanish tournament with a total of nine gold, three silver, and seven bronze medals.</li>
-        <li>India - New Film Haq receives Positive Response</li>
-        <li>India - Music Festival Attracts Large Crowd</li>
+        <h3>Top Headlines</h3>
+<ul>
+    <li><a href="national.html">Government Introduces New Education Policy</a></li>
+    <li><a href="national.html">Infrastructure Development Projects Announced</a></li>
+
+    <li><a href="international.html">Global Leaders Meet for Climate Summit</a></li>
+    <li><a href="international.html">India - Malaysia Joint Statement on Official Visit</a></li>
+
+    <li><a href="sports.html">India - Karate Kata: Why the Old Forms Still Matter</a></li>
+    <li><a href="sports.html">Indian Boxers Won Multiple Medals in Spanish Tournament</a></li>
+
+    <li><a href="entertainment.html">New Film Haq Receives Positive Response</a></li>
+    <li><a href="entertainment.html">Music Festival Attracts Large Crowd</a></li>
+</ul>
     </ul>
 </main>
 
@@ -50,4 +56,5 @@
 
 </body>
 </html>
+
 
